Bug: Nav Bar shifting down #128

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -56,9 +56,34 @@
   vertical-align: middle;
   font-size: 0.5em;
 }
+@media only screen and (max-width: 363px) {
+  .navbar-brand {
+    max-width: 200px;
+  }
+}
 
 /*  */
-.donate:hover{
-  transition: .3s linear;
-  background-color: #C5203E;
+.donate:hover {
+  transition: 0.3s linear;
+  background-color: #c5203e;
+}
+
+@media (max-width: 1140px) {
+  .navbar-right {
+    float: right !important;
+    margin-right: -15px;
+    display: none;
+  }
+  .main-navigation .navbar-toggle {
+    display: block;
+    position: absolute;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+  }
 }
